public enum ErrorType {
    Ko,
    IntersectionTaken,
    Suicide,
    InvalidPosition
}
